<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestion de usuarios</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Usuario">Usuario</string>
    <string name="Password">Password</string>
    <string name="ErrorLoginVacio">Introduzca sus datos de acceso</string>
    <string name="ErrorLoginIncorrecto">El usuario/contraseña no existe</string>
    <string name="LoginCorrecto">Conectado como</string>
    <string name="title_activity_gestion_usuarios">GestionUsuarios</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_lista_usuarios">ListaUsuarios</string>
    <string name="BotonEntrar">Entrar</string>
    <string name="BotonLimpiar">Limpiar</string>
    <string name="title_activity_gestionar_usuario">Gestionar Usuario</string>
    <string name="TextoUsuario">Usuario</string>
    <string name="TextoPassword">Password</string>
    <string name="TextoRol">Rol</string>
    <string name="TextoNombre">Nombre</string>
    <string name="TextoEmail">E-Mail</string>
    <string name="TextoTelefono">Tfno</string>
    <string name="BotonGuardar">Guardar</string>
    <string name="BotonBorrarUsuario">Borrar Usuario</string>
    <string name="title_activity_seleccion_rol">Seleccionar Rol</string>

</resources>
