<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BotonGuardar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GestionarUsuario" >

    <TextView
        android:id="@+id/tituloCampoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoUsuario"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/campoGestionUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextoUsuario" />

    <TextView
        android:id="@+id/tituloCampoPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/campoGestionPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tituloCampoRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoRol"
        android:focusable="false"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/campoGestionRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextoRol" />

    <TextView
        android:id="@+id/tituloCampoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoNombre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/campoGestionNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextoNombre" />

    <TextView
        android:id="@+id/tituloCampoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoEmail"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/campoGestionEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextoEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tituloCampoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoTelefono"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/campoGestionTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextoTelefono"
        android:inputType="phone" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/BotonGuardar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/BotonBorrarUsuario" />

    </RelativeLayout>

</LinearLayout>