<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/campoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/Usuario"
        android:inputType="none"
        android:singleLine="true" />

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/campoUsuario"
        android:layout_below="@+id/campoPassword"
        android:layout_marginTop="62dp"
        android:text="@string/BotonEntrar" />

    <Button
        android:id="@+id/botonLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/botonLogin"
        android:layout_alignBottom="@+id/botonLogin"
        android:layout_alignRight="@+id/campoUsuario"
        android:text="@string/BotonLimpiar" />

    <EditText
        android:id="@+id/campoPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/campoUsuario"
        android:layout_below="@+id/campoUsuario"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

</RelativeLayout>